ci(): update ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,24 +2,17 @@
 version: 2.1
 # Use a package of configuration called an orb.
 orbs:
-  # Declare a dependency on the welcome-orb
-  node: circleci/node@4.2
-jobs:
-  test:
-    executor: node/default
-    steps:
-      - checkout
-      - node/install-packages
-      - run:
-          command: npm run test
-  build:
-    executor: node/default
-    steps:
-      - run:
-          command: npm run nx build
+  heroku: circleci/heroku@1.2.6
+  node: circleci/node@4.2.1
+  cypress: cypress-io/cypress@1.27.0
 workflows:
-  # Name the workflow "welcome"
-  build-apollo-ui:
-    # Run the welcome/run job in its own container
+  test-and-deploy:
     jobs:
-      - test
+      - node/test
+      # - heroku/deploy-via-git:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
+      #     requires:
+      #       - node/test
