level 1, 2, and 3 implementation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-scss": "^4.5.3",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "react": "17.0.1",
