--- a/nx.json
+++ b/nx.json
@@ -1,34 +1,23 @@
 {
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
     "nx.json": "*"
   },
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "npmScope": "apollo",
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
   "projects": {
-    "apollo-ui": {
-      "tags": []
-    },
-    "apollo-ui-e2e": {
-      "tags": [],
-      "implicitDependencies": ["apollo-ui"]
-    }
+    "apollo-ui": { "tags": [] },
+    "apollo-ui-e2e": { "tags": [], "implicitDependencies": ["apollo-ui"] },
+    "conversation-intelligence": { "tags": [] }
   }
 }
