--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - node/install-packages
       - run:
-          command: npm run build
+          command: npm run nx build apollo-ui
 workflows:
   test-and-deploy:
     jobs:
