ci(): set node version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     executor:
       name: node/default
+      tag: '12.14.1'
     steps:
       - checkout
       - node/install-packages
