--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,11 @@ workflows:
     jobs:
       - build
       # - node/test
-      # - heroku/deploy-via-git:
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
-      #     requires:
-      #       - node/test
+      - heroku/deploy-via-git:
+          app-name: apollo-ui
+          filters:
+            branches:
+              only:
+                - master
+          requires:
+            - build
