--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           command: npm run nx build apollo-ui
 workflows:
-  test-and-deploy:
+  build-and-deploy:
     jobs:
       - build
       # - node/test
