--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,6 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
           requires:
             - build
