--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ workflows:
     jobs:
       - build
       # - node/test
-      - heroku/deploy-via-git:
+      - heroku/push-docker-image:
           filters:
             branches:
               only:
