--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,10 @@ jobs:
       - checkout
       - setup_remote_docker
       - heroku/push-docker-image:
+          process-types: web
           recursive: true
-      - heroku/release-docker-image
+      - heroku/release-docker-image:
+          process-types: web
 workflows:
   build-and-deploy:
     jobs:
