--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - checkout
       - node/install-packages
       - run:
-          command: npm run nx build apollo-ui
+          command: npm run build
   deploy:
     executor:
       name: heroku/default
