fix(): revert back build job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 workflows:
   build-and-deploy:
     jobs:
-      # - build
+      - build
       - deploy:
           filters:
               branches:
