--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,5 +1,7 @@
 FROM nginx
 
-ADD ./dist/apps/apollo-ui /usr/share/nginx/html
+COPY default.conf.template /etc/nginx/conf.d/default.conf.template
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY dist/apps/apollo-ui /usr/share/nginx/html
 
 
