--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,7 +1,11 @@
-FROM nginx
+FROM nginx:stable-alpine
 
 COPY default.conf.template /etc/nginx/conf.d/default.conf.template
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY dist/apps/apollo-ui /usr/share/nginx/html
 
+EXPOSE 80
+EXPOSE 443
+
+CMD ["nginx", "-g", "daemon off;"]
 
