--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -7,5 +7,5 @@ COPY dist/apps/apollo-ui /usr/share/nginx/html
 EXPOSE 80
 EXPOSE 443
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
 
