--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,6 +1,6 @@
 FROM nginx:stable-alpine
 
-COPY default.conf.template /etc/nginx/conf.d/default.conf.template
+COPY default.conf.template /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY dist/apps/apollo-ui /usr/share/nginx/html
 
