deploy(): add default mime types

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,8 @@ events {
 http {
   access_log /dev/stdout;
   server_tokens off; # Hide nginx version in Server header & page footers
+  include       /etc/nginx/mime.types;
+  default_type  text/html;
 
   include /etc/nginx/conf.d/*.conf;
 }
